@@ -1,3 +1,10 @@
+Travel::Status::DE::DBRIS 0.12 - Sat Jul 05 2025
+
+    * dbris-m: Fix --(raw-)json for carriage formation requests
+    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
+    * Formation::Group: Update carriage model list (patch by Lili Chelsea Urban)
+    * Formation::Group: Correctly identify LINT 27 and RS 1 trains
+
 Travel::Status::DE::DBRIS 0.11 - Tue May 06 2025
 
     * Journey: Fix type/train_no handling when they are not separated by
